docs, UseFormatter (renamed) for annotations, ErrorStyleHandler